--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,17 @@
+$secondary: #fee5c8;
+@import "~bootstrap/scss/bootstrap.scss";
+@import 'https://fonts.googleapis.com/css?family=Archivo+Black:300,400,500&amp;lang=en';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
